Clarify type name handling from different sources